--- a/proyectoV5/Web.config
+++ b/proyectoV5/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="conexionCALUFA" connectionString="server=localhost; port=3307;
-         user id=root; password=135PsPJJ1; database=proyecto;"/>
+         user id=root; password=1234; database=proyecto;"/>
   </connectionStrings>
   
   <system.web>
